--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/Functions/IDCheck.py=utf-8
 encoding//src/Functions/func_exercise2_1.py=utf-8
+encoding//src/Functions/get_fundoc.py=utf-8
 encoding//src/Functions/get_name.py=utf-8
 encoding//src/Functions/get_page.py=utf-8
