--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,9 @@
 eclipse.preferences.version=1
 encoding//src/Functions/IDCheck.py=utf-8
 encoding//src/Functions/func_exercise2_1.py=utf-8
+encoding//src/Functions/get_cjsum.py=utf-8
+encoding//src/Functions/get_funcname.py=utf-8
 encoding//src/Functions/get_fundoc.py=utf-8
 encoding//src/Functions/get_name.py=utf-8
 encoding//src/Functions/get_page.py=utf-8
+encoding//src/Functions/list_info.py=utf-8
