--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/Classes/ExerciseCodes/Student.py=utf-8
+encoding//src/Classes/ExerciseCodes/dictClass.py=utf-8
 encoding//src/Classes/Learning_Notes/Lesson1.py=utf-8
 encoding//src/Functions/IDCheck.py=utf-8
 encoding//src/Functions/func_exercise2_1.py=utf-8
