study function on 2016-04-05

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,9 @@ encoding//src/Classes/ExerciseCodes/Student.py=utf-8
 encoding//src/Classes/ExerciseCodes/dictClass.py=utf-8
 encoding//src/Classes/Learning_Notes/Lesson1.py=utf-8
 encoding//src/Functions/IDCheck.py=utf-8
+encoding//src/Functions/LearningNotes.py=utf-8
+encoding//src/Functions/deco.py=utf-8
+encoding//src/Functions/easyMath.py=utf-8
 encoding//src/Functions/func_exercise2_1.py=utf-8
 encoding//src/Functions/get_cjsum.py=utf-8
 encoding//src/Functions/get_funcname.py=utf-8
