--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//src/Classes/ExerciseCodes/Student.py=utf-8
 encoding//src/Classes/ExerciseCodes/dictClass.py=utf-8
 encoding//src/Classes/Learning_Notes/Lesson1.py=utf-8
+encoding//src/Exceptions/exception.py=utf-8
 encoding//src/Functions/IDCheck.py=utf-8
 encoding//src/Functions/LearningNotes.py=utf-8
 encoding//src/Functions/deco.py=utf-8
