--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//Exercise/Chapter8/8_4_PrimeNumbers.py=utf-8
+encoding//Exercise/Chapter8/8_5_Factors.py=utf-8
 encoding//src/Classes/ExerciseCodes/Student.py=utf-8
 encoding//src/Classes/ExerciseCodes/dictClass.py=utf-8
 encoding//src/Classes/Learning_Notes/Lesson1.py=utf-8
