update exercise problems

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,11 @@
 eclipse.preferences.version=1
+encoding//Exercise/Chapter8/8_10_TextProcessing01.py=utf-8
+encoding//Exercise/Chapter8/8_11_TextProcessing02.py=utf-8
+encoding//Exercise/Chapter8/8_13_Performance.py=utf-8
 encoding//Exercise/Chapter8/8_4_PrimeNumbers.py=utf-8
 encoding//Exercise/Chapter8/8_5_Factors.py=utf-8
+encoding//Exercise/Chapter8/8_8_Factorial.py=utf-8
+encoding//Exercise/Chapter8/8_9_FibonacciNumbers.py=utf-8
 encoding//src/Classes/ExerciseCodes/Student.py=utf-8
 encoding//src/Classes/ExerciseCodes/dictClass.py=utf-8
 encoding//src/Classes/Learning_Notes/Lesson1.py=utf-8
